...

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnBackBookDetail"
                    android:layout_width="@dimen/margin_xlarge"
                    android:layout_height="match_parent"
...

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivBook"
                        android:layout_width="@dimen/width_book_detail"
                        android:layout_height="@dimen/height_book_detail"
...
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_toEndOf="@id/cvBookImage"
                    android:id="@+id/tvBookTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:layout_toEndOf="@id/cvBookImage"
                    android:layout_below="@id/tvBookTitle"
                    android:id="@+id/tvAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:layout_toEndOf="@id/cvBookImage"
                    android:layout_below="@id/tvAuthor"
                    android:id="@+id/tvBookType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:layout_toEndOf="@id/ivDot"
                    android:layout_below="@id/tvAuthor"
                    android:id="@+id/tvPage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                <LinearLayout
                    android:layout_below="@id/divider1"
                    android:id="@+id/llButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:layout_below="@id/llButton"
                    android:layout_toEndOf="@id/ivInfo"
                    android:id="@+id/tvInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_below="@id/divider2"
                    android:id="@+id/tvAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_below="@id/tvAbout"
                    android:id="@+id/tvOverview"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_overview"
...
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_below="@id/tvOverview"
                    android:id="@+id/tvRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                <include
                    android:layout_below="@id/tvRating"
                    android:id="@+id/vpRatingAndReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
