<?xml version="1.0" encoding="utf-8"?>
<com.lynnpadc.libraryapp.views.viewpods.BookListViewPod xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBookList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true" />

</com.lynnpadc.libraryapp.views.viewpods.BookListViewPod>